--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@
 
 title: Your awesome title
 email: your-email@domain.com
-author: GitHub User
-copyright: Copyright © 1970-2010
+author: Evermotor
+copyright: Copyright © 2021
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
